# MicroMix

./: .gitignore  .gitmodules  README.md  main.py  prof_micromix.sh  reorder_indices.py  requirements.txt  run_micromix.sh  run_mircomix.sh  test.sh  utilize.py
benchmarks/: benchmark_e2e_fp16.py  benchmark_e2e_int8.py  benchmark_e2e_micromix.py  benchmark_layer-Copy1.py  benchmark_layer_micromix.py  kv_cache.py  modeling_fp16.py  modeling_micromix.py  trt-fp16-layer-llama.py  trt-fp16-layer-qwen.py  trt-fp16-prefill-llama.py  trt-fp8-layer-llama.py  trt-fp8-layer-qwen.py  trt-fp8-prefill-llama.py  trt-w4a16-layer-llama.py  trt-w4a16-layer-qwen.py
benchmarks/.ipynb_checkpoints/: benchmark_e2e_fp16-checkpoint.py  fp16-checkpoint.py  modeling_micromix-checkpoint.py
eval_plus/: base.py  generate.py  hf.py  model.py  modelutils_qwen.py  qLinearLayer.py  readme.md  requirements.txt  test.sh  utils.py
kernels/benchmark/: trt-fp16-layer-llama.py  trt-fp16-layer-qwen.py  trt-fp16-prefill-llama.py  trt-fp8-layer-llama.py  trt-fp8-layer-qwen.py  trt-fp8-prefill-llama.py  trt-fp8-prefill-qwen.py  trt-fp8-profiler.py  trt-w4a16-layer-llama.py  trt-w4a16-layer-qwen.py  trt-w4a16-profiler.py
kernels/mgemm/: CMakeLists.txt  make.sh
kernels/mgemm/benchmark/: bench_fp4.cu  bench_fp6.cu  bench_fp8.cu  bench_reorder_gemm.cu
kernels/mgemm/include/: fp4.h  fp6.h  fp8.h  gemm.h  mxdtype.h  reorder.cuh
kernels/mgemm/src/: activate.cu  fp8.cu  gemm.cu  reorder.cu
math_eval/: README.md  data_loader.py  gptq.py  math_eval.py  model_utils.py  modelutils_qwen.py  qQwenLayer.py  requirements.txt
math_eval/sh/: eval.sh
mgemm/: CMakeLists.txt  README.md  fp16.py  make.sh  setup.py  test.py
mgemm/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  test-checkpoint.py
mgemm/benchmark/: bench.cu  bench_fp4.cu  bench_fp6.cu  bench_fp8.cu  bench_gemm.cu  bench_reorder.cu  cutlass_mxf4f6f8_bench.cu  mxf4f6f8_bench.cu  mxf4f8_bench.cu
mgemm/include/: flashinfer.h  gemm.h  gemm_shared_storage.h  gemm_shared_storage_cpasync.h  gemm_shared_storage_tma.h  gemm_utils.h  kernel_sm120_multistage_cpasync.h  kernel_sm120_multistage_tma.h  kernel_sm120_multistage_tma_warpspecialized.h  reorder.cuh  sm120_fp4_shift.h  sm120_multistage_cpasync.h  sm120_multistage_tma.h  sm120_sf_layout.h  w4a4.h  w4a6.h  w4a8.h  w6a6.h  w6a8.h
mgemm/include/.ipynb_checkpoints/: gemm-checkpoint.h  gemm_shared_storage-checkpoint.h  reorder-checkpoint.cuh  sm120_multistage_tma-checkpoint.h  sm120_sf_layout-checkpoint.h  w8a8-checkpoint.h
mgemm/src/: activate.cu  bindings.cpp  flashinfer.cu  fp4.cu  fp6.cu  gemm.cu  reorder.cu  rmsnorm.cu  w4a4.cu  w4a8.cu  w6a8.cu
mgemm/src/.ipynb_checkpoints/: bindings-checkpoint.cpp  gemm-checkpoint.cu  reorder-checkpoint.cu  w4a6-checkpoint.cu  w6a6-checkpoint.cu  w8a8-checkpoint.cu
model/: datautils.py  eval.py  main.py  model_utils.py  parallel_utils.py  qLinearLayer.py  qLlamaLayer.py  qMixtralLayer.py  qQwenLayer.py  requirements.txt  smooth.py
model/.ipynb_checkpoints/: main-checkpoint.py  model_utils-checkpoint.py  parallel_utils-checkpoint.py  qQwenLayer-checkpoint.py  requirements-checkpoint.txt
saved/: llama-2-7b_average_bits_wikitext2_mean.pt  llama-2-7b_p6_num_wikitext2_mean.pt  llama-2-7b_p8_num_wikitext2_mean.pt  llama-3.1-8b_average_bits_wikitext2_mean.pt  llama-3.1-8b_p6_num_wikitext2_hessian.pt  llama-3.1-8b_p6_num_wikitext2_mean.pt  llama-3.1-8b_p8_num_wikitext2_hessian.pt  llama-3.1-8b_p8_num_wikitext2_mean.pt  qwen-2.5-14b_p6_num_wikitext2_mean.pt  qwen-2.5-14b_p8_num_wikitext2_mean.pt  qwen-2.5-32b_average_bits_wikitext2_mean.pt  qwen-2.5-32b_p6_num_wikitext2_mean.pt  qwen-2.5-32b_p8_num_wikitext2_mean.pt  qwen-2.5-7b_average_bits_wikitext2_mean.pt  qwen-2.5-7b_p6_num_wikitext2_hessian.pt  qwen-2.5-7b_p6_num_wikitext2_mean.pt  qwen-2.5-7b_p8_num_wikitext2_hessian.pt  qwen-2.5-7b_p8_num_wikitext2_mean.pt
